--- a/app/src/main/res/layout/activity_table_detail.xml
+++ b/app/src/main/res/layout/activity_table_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <it.neokree.materialtabs.MaterialTabHost
         android:id="@+id/materialTabHost"
@@ -15,8 +16,22 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
+        android:layout_below="@id/materialTabHost"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/editProfileButton"
+        android:elevation="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:fab_icon="@drawable/ic_action"
+        app:fab_colorNormal="@color/colorPrimary" />
 
-</LinearLayout>
+
+</RelativeLayout>
